# Deep-Learning-Project--Dialogue--Autonomous-Movement-and-Memory-in-Video-Game

./: README.md  conversation_lang_chain.py  langchain_basics_01_llms_+_prompting.py  llama_pretrained.ipynb
langchain-zero-to-hero-0/my-app/: README.md  pyproject.toml
langchain-zero-to-hero-0/my-app/tests/: test_chain.py
langchain-zero-to-hero-0/my-langserve/: README.md  pyproject.toml
langchain-zero-to-hero-0/my-langserve/app/: server.py
